fix: use Java 8 compatible isBlank alternative
Replace String.isBlank() with null/trim().isEmpty() check
for Java 8 compatibility.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>